# Sip

./: .gitignore  CMakeLists.txt  README.md  Scanner.cpp  Sip  Sip.cpp  Token.cpp  test  test.txt
.cache/clangd/index/: Sip.cpp.0318784DE517AF0B.idx
includes/: Sip.hpp  Token.hpp
src/: Grammar.hpp  Scanner.hpp  Sip.hpp  Token.hpp  main.cpp
tools/: mainAST.cpp
